src/components/modal/style.css
.modal__wrapper {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  max-width: 738px;
  height: 382px;
  padding: 6rem;
  background-color: var(--color-blue-700);
  border-radius: var(--border-radius-s);
}

.modal__header {
  display: flex;
  justify-content: space-between;
}

.modal__wrapper h2 {
  font-size: 4rem;
  font-weight: 700;
  line-height: 1.2;
  text-transform: uppercase;
  color: var(--color-white);
}

.modal__wrapper p {
  font-size: 2.5rem;
  font-weight: 400;
  line-height: 1.4;
  color: var(--color-white);
}

.modal-close {
  display: flex;
  font-size: 6rem;
  max-width: 50px;
  max-height: 50px;
  background-color: transparent;
}

.modal-close:focus {
  border: 1px solid var(--color-white);
  outline: var(--color-white);
}

.backdrop {
  position: fixed;
  z-index: 1000;
  top: 0;
  left: 0;
  bottom: 25px;
  right: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  opacity: 1;
  background-color: rgba(0, 0, 0, 0.7);
  animation: fadeIn 0.3s ease-out;
}

.modal__socials {
  margin-top: auto;
}

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

@media (max-width: 36rem) {
  .modal {
    width: 100%;
    padding: 4rem;
  }

  .modal div {
    font-size: 2rem;
  }
}

